libs/extractor/src/snapshots/extractor__tests__package_imported_whole.snap
---
source: libs/extractor/src/lib.rs
expression: outputs
---
[
    (
        "import * as Devup from '@devup-ui/react';\nexport const k = Devup.keyframes({ from: { opacity: 0 } });\nexport const G = Devup.createGlobalStyle({ body: { m: 0 } });\nexport const c = Devup.css`color: red;`;\nexport const t = Devup.keyframes`from { opacity: 1; }`;\nDevup.globalCss`body { margin: 0; }`;",
        "import \"@devup-ui/react/devup-ui-0.css\";\nimport * as Devup from \"@devup-ui/react\";\nexport const k = \"KHch95dk0jofy9eoyu\";\nexport const G = () => null;\nexport const c = \"FLtest_ptsx-OLcolor-vred\";\nexport const t = \"KHbql3q341pn7nn1po\";\n;\n",
    ),
    (
        "import Devup from '@devup-ui/react';\nexport const S = Devup.styled.div({ color: 'red' });\nexport const T = Devup.styled('span', { color: 'blue' });\nexport const U = Devup.styled.p.attrs({ role: 'note' })({ m: 1 });\nexport const g = <Devup.Global styles={{ body: { p: 0 } }} />;",
        "import \"@devup-ui/react/devup-ui-0.css\";\nimport Devup from \"@devup-ui/react\";\nexport const S = ({ style, className, ...rest }) => <div {...rest} className={[\"FLtest_ptsx-OLcolor-vred\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const T = ({ style, className, ...rest }) => <span {...rest} className={[\"FLtest_ptsx-OLcolor-vblue\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const U = (__devupProps) => (({ style, className, ...rest }) => <p {...rest} className={[\"FLtest_ptsx-OLmargin-v4px\", className].filter(Boolean).join(\" \")} style={style} />)({\n\t...__devupProps,\n\t...{ role: \"note\" }\n});\nexport const g = <Devup.Global />;\n",
    ),
    (
        "import * as Devup from '@devup-ui/react';\nimport { styled } from '@devup-ui/react';\nexport const S = styled.div({ p: 1 });\nexport const o = other.styled.div({ p: 1 });\nexport const m = <motion.div />;",
        "import \"@devup-ui/react/devup-ui-0.css\";\nimport * as Devup from \"@devup-ui/react\";\nexport const S = ({ style, className, ...rest }) => <div {...rest} className={[\"FLtest_ptsx-OLpadding-v4px\", className].filter(Boolean).join(\" \")} style={style} />;\nexport const o = other.styled.div({ p: 1 });\nexport const m = <motion.div />;\n",
    ),
]
