libs/extractor/src/snapshots/extractor__tests__parenthesized_string_literals.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import { Box } from '@devup-ui/react';\nconst e = <Box as={('span')} bg='red' />;\nconst g = <Box bg={`${('teal')}`} />;\nconst h = <Box color={('navy')} />;\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "teal",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "navy",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst e = <span className=\"OLbackground-vred\" />;\nconst g = <div className=\"OLbackground-vteal\" />;\nconst h = <div className=\"OLcolor-vnavy\" />;\n",
}
