libs/extractor/src/snapshots/extractor__tests__props_direct_array_responsive_select.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Flex} from '@devup-ui/core'\n;<Flex gap={[[1, 2, 3], [4, 5, 6]][idx]} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "12px",
                level: 2,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "20px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "24px",
                level: 2,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "8px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment48) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment48?.[0] ?? \"\"}`} style={{ ...__devupAssignment48?.[1] }} />)([((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OLgap-v4px\",\n\t{},\n\t__devupValue\n])(1), ((__devupValue) => [\n\t\"OLgap-v8px-l1\",\n\t{},\n\t__devupValue\n])(2), ((__devupValue) => [\n\t\"OLgap-v12px-l2\",\n\t{},\n\t__devupValue\n])(3)), ((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OLgap-v16px\",\n\t{},\n\t__devupValue\n])(4), ((__devupValue) => [\n\t\"OLgap-v20px-l1\",\n\t{},\n\t__devupValue\n])(5), ((__devupValue) => [\n\t\"OLgap-v24px-l2\",\n\t{},\n\t__devupValue\n])(6))][idx]);\n",
}
