libs/extractor/src/snapshots/extractor__tests__props_direct_array_select-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Flex} from '@devup-ui/core'\n        <Flex bg={[`$red`, `${variable}`][idx]} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "`${variable}`",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment54) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment54?.[0] ?? \"\"}`} style={{ ...__devupAssignment54?.[1] }} />)([((__devupValue) => [\n\t\"OHb9zcebonqx3uqcup\",\n\t{},\n\t__devupValue\n])(`$red`), ((__devupValue) => [\n\t\"OHbu587h2rubi7cfy8\",\n\t{ \"---SUHblyru01gblz_1lvm-a1\": __devupValue },\n\t__devupValue\n])(`${variable}`)][idx]);\n",
}
