libs/extractor/src/snapshots/extractor__tests__props_direct_array_select-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Center} from '@devup-ui/core'\n<Center\n            bg={['$webBg', '$appBg', '$solutionBg'][categoryId - 1]}\n          >\n          </Center>\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "align-items",
                value: "center",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$appBg",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$solutionBg",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$webBg",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "justify-content",
                value: "center",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment62) => <div className={`OLdisplay-vflex-o0 OHb5lnub7j06ag8zzq OHb7gvrmdw_y_s8k48 ${__devupAssignment62?.[0] ?? \"\"}`} style={{ ...__devupAssignment62?.[1] }}>\n          </div>)([\n\t((__devupValue) => [\n\t\t\"OHdt7q1jxe1awrhy47\",\n\t\t{},\n\t\t__devupValue\n\t])(\"$webBg\"),\n\t((__devupValue) => [\n\t\t\"OHaz02trb4vhms5n_h\",\n\t\t{},\n\t\t__devupValue\n\t])(\"$appBg\"),\n\t((__devupValue) => [\n\t\t\"OHb2sxw33b3uwb8yf1\",\n\t\t{},\n\t\t__devupValue\n\t])(\"$solutionBg\")\n][categoryId - 1]);\n",
}
